@@ -9,6 +9,9 @@ pre-1.0 releases are numbered as 0.XX.
 preference pane (with confirmation message when activating skipSave). Changing
 the preference is not permitted if any clippings are on the stack.
 control key was not pressed has been resolved.
+- Double-clicking the icon while Jumpcut is running now opens the Preferences
+window regardless of whether the status bar icon is displayed; this lets users
+get at the preferences even when the icon is hidden by the notch.
 ### Fixed
 - A strange regression where the escape key dismissed the bezel only when the
 control key was not pressed has been resolved.
